# algobase

./: .env  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  settings.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  publish-to-pypi.yml
algobase/: choices.py  config.py  functional.py  settings.py
algobase/algorand/: __init__.py  account.py  client.py  dispenser.py  providers.py  simple_mint.py
algobase/data/: __init__.py  ipfs.toml
algobase/ipfs/: __init__.py  client_base.py  nft_storage.py
algobase/models/: algod.py  arc19.py  arc3.py  asa.py  asset_params.py  dispenser.py  kmd.py
algobase/types/: __init__.py  annotated.py
algobase/utils/: __init__.py  cid.py  hash.py  read.py  url.py  validate.py
docker/: Dockerfile  README.md
docs/: how-to-guides.md  index.md  reference.md
docs/how_to/: how_to_mint_nft_localnet.md  how_to_store_json_ipfs.md  how_to_validate_arc3.md
docs/stylesheets/: extra.css
examples/: simple_mint.py  store_json_ipfs.py  validate_arc3.py
explanation/: index.html
how-to-guides/: index.html
how_to/how_to_mint_nft_localnet/: index.html
how_to/how_to_store_json_ipfs/: index.html
how_to/how_to_validate_arc3/: index.html
humblepy/: __init__.py  choices.py
humblepy/models/: __init__.py  arc3.py  asa.py  asset_params.py  nft.py
humblepy/types/: __init__.py  annotated.py
humblepy/utils/: __init__.py  read.py  validate.py
reference/: index.html
tests/: __init__.py  test_config.py  test_functional.py  test_settings.py  types.py
tests/test_algorand/: test_account.py  test_client.py  test_dispenser.py  test_providers.py  test_simple_mint.py
tests/test_ipfs/: conftest.py  test_client_base.py  test_nft_storage.py
tests/test_models/: conftest.py  test_arc19.py  test_arc3.py  test_asa.py  test_asset_params.py  test_nft.py
tests/test_types/: test_annotated.py
tests/test_utils/: test_cid.py  test_hash.py  test_read.py  test_url.py  test_validate.py
tutorials/: index.html
