# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "algobase"
version = "0.8.3"
description = "A type-safe Python library for interacting with assets on Algorand."
readme = "README.md"
authors = ["algobase <alexandercodes@proton.me>"]
license = "Apache Software License 2.0"
repository = "https://github.com/code-alexander/algobase"
homepage = "https://github.com/code-alexander/algobase"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
# "algobase" = "algobase.__main__:app"

[tool.poetry.dependencies]
python = "^3.11"

typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"
pydantic = "^2.5.3"
py-algorand-sdk = "^2.5.0"
babel = "^2.14.0"
cytoolz = "^0.12.2"
fastapi = "^0.109.0"
python-decouple = "^3.8"
httpx = "^0.26.0"
pytest-httpx = "^0.28.0"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}


[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_export.plugins:ExportApplicationPlugin"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.6"
mypy = "^1.8.0"
mypy-extensions = "^1.0.0"
pre-commit = "^3.6.0"
pydocstyle = "^6.3.0"
pylint = "^3.0.3"
pytest = "^7.4.4"
pyupgrade = "^3.15.0"
safety = "^2.3.5"
coverage = "^7.4.0"
coverage-badge = "^1.1.0"
pytest-html = "^4.1.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.13"
black = {version = "^24.1a1", allow-prereleases = true}
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-material = "^9.5.6"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
  "D", # pydocstyle
  "I", # isort
  "UP", # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.11"
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "algobase"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
